src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Foreign_Desk_Location_ID__c</fullName>
        <label>CC Foreign Desk Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Foreign_Expertise_Location_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Foreign Expertise Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Location_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Location ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CC_Location_Parent_ID__c</fullName>
        <label>CC Location Parent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Location_Type_ID__c</fullName>
        <description>Location Type ID from CC Database</description>
        <inlineHelpText>Location Type ID from CC Database</inlineHelpText>
        <label>CC Location Type ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Name__c</fullName>
        <label>CC Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Parent_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization Parent ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Ranking_Foreign_Desk_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization Ranking Foreign Desk ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Orginization_Ranking_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Orginization Ranking ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Forname__c</fullName>
        <label>CC Person Forname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Person ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Organization_ID__c</fullName>
        <label>CC Person Organization ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Ranking_Foreign_Expertise_ID__c</fullName>
        <label>CC Person Ranking Foreign Expertise ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Ranking_ID__c</fullName>
        <label>CC Person Ranking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Surname__c</fullName>
        <label>CC Person Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Practice_Area_ID__c</fullName>
        <label>CC Practice Area ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Publication ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_Name__c</fullName>
        <label>CC Publication Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_Type__c</fullName>
        <label>CC Publication Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Rank_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Rank ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Ranking_Name__c</fullName>
        <label>CC Ranking Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Ranking_Short__c</fullName>
        <label>CC Ranking Short</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Subsection_ID__c</fullName>
        <label>CC Subsection ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Subsection_Type_ID__c</fullName>
        <label>CC Subsection Type ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_RE__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Desk_Location__c</fullName>
        <label>Foreign Desk Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Expertise_Location__c</fullName>
        <label>Foreign Expertise Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_RE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type_RE__c</fullName>
        <description>Location Type from CC Database</description>
        <inlineHelpText>Location Type from CC Database</inlineHelpText>
        <label>Location Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (Parent Account)</relationshipLabel>
        <relationshipName>Locations_as_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Child Locations</relationshipLabel>
        <relationshipName>Child_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <label>Practice Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type_ID__c</fullName>
        <label>Publication Type ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ranking</label>
        <referenceTo>Rankings__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Safe_Description__c</fullName>
        <label>Safe Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order_RE__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsection_Type__c</fullName>
        <label>Subsection Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Issue__c</fullName>
        <label>Year (Issue)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Type_RE__c</columns>
        <columns>Parent_Location__c</columns>
        <columns>Safe_Description__c</columns>
        <columns>Description_RE__c</columns>
        <columns>Is_Active_RE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>